Fixed repair<->maint bug

--- a/app/js/pages/SitePage_status.hbs
+++ b/app/js/pages/SitePage_status.hbs
@@ -28,7 +28,7 @@
 		  </button>
 		  <ul class="dropdown-menu" role="menu" style="font-size: 125%;">
 		      <li><a id="status_ok"><span class="text-success">{{T "Functional"}}</span></a></li>
-		      <li><a id="status_repair"><span class="text-warning">{{T "Needs repair"}}</span></a></li>
+		      <li><a id="status_maint"><span class="text-warning">{{T "Needs repair"}}</span></a></li>
 		      <li><a id="status_broken"><span class="text-danger">{{T "Non-functional"}}</span></a></li>
 		      <li><a id="status_missing"><span class="text-danger">{{T "No longer exists"}}</span></a></li>
 		  </ul>
