Fixed Moto E back button

--- a/app/js/AppView.hbs
+++ b/app/js/AppView.hbs
@@ -53,7 +53,7 @@
 			<a id="brand_logo" class="navbar-brand">
 				<img src="img/black_logo_40.png" style="padding-top: 5px;">
 			</a>
-	  		<span class="navbar-brand" style="margin-left: -15px">
+	  		<span class="navbar-brand" style="margin-left: 0px; padding-left: 0px;">
 				<span id="navbar_title"></span>
 			</span>
 	   		<div id="navbar_buttons">
