Re-added custom display

--- a/app/js/pages/SitePage.hbs
+++ b/app/js/pages/SitePage.hbs
@@ -69,7 +69,7 @@
       {{T "Code:"}} <b>{{site.code}}</b>
   </div>
 
-  <!--{{#if site.custom}}
+  {{#if site.custom}}
     <br/><br/>
     <div class="well well-small">
       {{#eachProperty site.custom}}
@@ -79,7 +79,7 @@
         {{/eachProperty}}
       {{/eachProperty}}
     </div>
-  {{/if}}-->
+  {{/if}}
 
   <h4>{{T "Location"}}</h4>
   <div id="location"></div>
