--- a/app/js/pages/SettingsPage.hbs
+++ b/app/js/pages/SettingsPage.hbs
@@ -49,7 +49,7 @@
 
 <h4>{{T "Advanced"}}</h4>
 <div>
-  <button id="reset_db" class="btn btn-danger" type="button">{{T "Reset Local Storage"}}</button>
+  <button id="reset" class="btn btn-danger" type="button">{{T "Reset Storage"}}</button>
   <span class="help-block">{{T "This will completely reset any cached data and cause you to lose any pending changes that you have not uploaded"}}</span>
 </div>
 
