--- a/app/js/pages/SitePage.hbs
+++ b/app/js/pages/SitePage.hbs
@@ -8,9 +8,14 @@
   .text {
     padding: 2px;
   }
+  
   .site-name {
       font-size: 18pt;
       font-weight: bold
+  }
+
+  .site-desc {
+      font-size: 14pt;
   }
 
   .margined {
@@ -57,27 +62,22 @@
     {{T "Edit"}}
   </button>
   <div class="site-name">{{site.name}}</div>
+  <div class="site-desc">{{site.desc}}</div>
+
   <div>
-    {{site.desc}}
+      <span class="text-muted">{{T "Type:"}}</span> <b>{{siteTypeName}}</b></span>
   </div>
 
   <div>
-      {{T "Type:"}} <b>{{siteTypeName}}</b></span>
-  </div>
-
-  <div>
-      {{T "Code:"}} <b>{{site.code}}</b>
+      <span class="text-muted">{{T "Code:"}}</span> <b>{{site.code}}</b>
   </div>
 
   {{#if attrs}}
-    <br/>
-    <div class="well well-small">
-      {{#each attrs}}
-      <div>
-        <span class="text-muted">{{key}}</span>: {{value}}
-      </div>
-      {{/each}}
+    {{#each attrs}}
+    <div>
+      <span class="text-muted">{{key}}</span>: {{value}}
     </div>
+    {{/each}}
   {{/if}}
 
   {{#if site.custom}}
