Site attributes ready

--- a/app/js/pages/NewSitePage.hbs
+++ b/app/js/pages/NewSitePage.hbs
@@ -1,8 +1,17 @@
 <div id="site_questions"></div>
 
-<div id="site_attr_questions"></div>
+<div>
+	<button id="show_attrs" type="button" class="btn btn-default">
+		Display Site Attributes...
+	</button>
+</div>
+
+<div id="site_attr_questions" style="display:none"></div>
+
+<br/>
+<br/>
 
 <div>
-	<button id="create_site" type="button" class="btn btn-primary">{{T "Create"}}</button>
-	<button id="cancel" type="button" class="btn">{{T "Cancel"}}</button>
+	<button id="create_site" type="button" class="btn btn-lg btn-primary">{{T "Create"}}</button>
+	<button id="cancel" type="button" class="btn btn-lg btn-default">{{T "Cancel"}}</button>
 </div>
