--- a/app/js/ButtonBar.hbs
+++ b/app/js/ButtonBar.hbs
@@ -46,7 +46,7 @@
     </ul>  
     </div>
   {{else}}
-    <div id="{{id}}" class="buttonbar-item menuitem" {{#if icon}}style="background: url(img/{{icon}}) black no-repeat 0;"{{else}}style="width:auto"{{/if}}>
+    <div id="{{id}}" class="buttonbar-item menuitem" {{#if icon}}style="background: url(img/{{icon}}) black no-repeat 0;"{{else}}style="width:auto; padding-right: 10px;"{{/if}}>
       {{#if text}}{{text}}{{else}}&nbsp;{{/if}}
     </div>
   {{/if}}
