--- a/app/js/pages/SiteMapPage.hbs
+++ b/app/js/pages/SiteMapPage.hbs
@@ -28,6 +28,10 @@
     background-color: white;
   }
 
+  #bottom_navbar .dropdown-menu {
+    font-size: 20px;
+  }
+
 </style>
 
 <div id="bottom_navbar" class="text-center">
