--- a/app/js/pages/SurveyListPage.hbs
+++ b/app/js/pages/SurveyListPage.hbs
@@ -16,6 +16,10 @@
     background-color: white;
   }
 
+  #bottom_navbar .dropdown-menu {
+    font-size: 20px;
+  }
+
   .bottom-padded {
     padding-bottom: 50px;
   }
