Intel Yolo has distorted map on 3.9.8 (#407)

--- a/app/css/index.css
+++ b/app/css/index.css
@@ -4,3 +4,4 @@
 @import "./app/css/Pager.css";
 @import "./app/css/SlideMenu.css";
 @import "./app/css/mobile.css";
+@import "./app/css/FixLeafletZ.css";
