Fixing issue #401: Improved draft survey flow in app

--- a/app/js/pages/SurveyPage.hbs
+++ b/app/js/pages/SurveyPage.hbs
@@ -12,13 +12,14 @@
     margin-top: 4px;
 }
 </style>
-
+<div id="alarm_div" class="alert alert-warning" role="alert" hidden="true">
+    A draft already exists for that survey. <button id="other_survey_btn" type="button">Test</button>
+</div>
 <select id="locale" class="form-control input-sm pull-right" style="width:auto">
 	{{#each locales}}
 	<option value="{{code}}">{{name}}</option>
 	{{/each}}
 </select>
-
 <div class="responsecode_div">
 	<span class="text-muted"><b>{{T "Survey"}} </b></span>
 	{{#if response.code}}
