--- a/app/js/pages/SurveyPage.hbs
+++ b/app/js/pages/SurveyPage.hbs
@@ -13,7 +13,7 @@
 }
 </style>
 <div id="alarm_div" class="alert alert-warning" role="alert" hidden="true">
-    <button id="other_survey_btn" type="button" class="btn btn-default"></button>
+    <button id="go_to_existing_draft_btn" type="button" class="btn btn-default"></button>
 </div>
 <select id="locale" class="form-control input-sm pull-right" style="width:auto">
 	{{#each locales}}
