Fix for hbs file

--- a/app/js/pages/SurveyPage.hbs
+++ b/app/js/pages/SurveyPage.hbs
@@ -13,6 +13,7 @@
 }
 </style>
 <div id="alarm_div" class="alert alert-warning alert-dismissible" role="alert" hidden="true">
+	<span id="alarm_text"></span>
     <button id="go_to_existing_draft_btn" type="button" class="btn btn-sm btn-default"></button>
     <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
 </div>
