--- a/app/css/mobile.css
+++ b/app/css/mobile.css
@@ -24,6 +24,7 @@ a {
 }
 * {
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  -webkit-tap-highlight-color: transparent; 
 }
 
 .checkbox {
