--- a/app/js/pages/SitePage.hbs
+++ b/app/js/pages/SitePage.hbs
@@ -52,6 +52,7 @@
     <ul class="dropdown-menu text-left" role="menu">
       <li><a id="add_test">{{T "Water Test"}}</a></li>
       <li><a id="add_note">{{T "Note"}}</a></li>
+      <li><a id="add_survey">{{T "Survey"}}</a></li>
     </ul>
   </div>  
 </div>
