Moved logout to settings screen

--- a/app/js/PageMenu.hbs
+++ b/app/js/PageMenu.hbs
@@ -9,6 +9,6 @@
 <li><a id="settings"><span class="glyphicon glyphicon-cog"></span> {{T "Settings"}}</a></li>
 <li><a id="groups"><span class="glyphicon glyphicon-user"></span> {{T "My Groups"}}</a></li>
 <li><a id="report_problem"><span class="glyphicon glyphicon-exclamation-sign"></span> {{T "Report a Problem"}}</a></li>
-<li><a id="logout"><span class="glyphicon glyphicon-off"></span> {{T "Logout"}}</a></li>
+<!--<li><a id="logout"><span class="glyphicon glyphicon-off"></span> {{T "Logout"}}</a></li>-->
 <li><a id="sensor_list"><span class="glyphicon glyphicon-stats"></span> {{T "Sensors"}}</a></li>
 </ul>
