--- a/app/js/pages/SettingsPage.hbs
+++ b/app/js/pages/SettingsPage.hbs
@@ -37,6 +37,13 @@
 	{{/if}}
 {{/if}}
 
+<br>
+<br>
+<div>
+	<button type="button" id="logout" class="btn btn-default">
+		<span class="glyphicon glyphicon-off"></span> {{T "Logout"}}
+	</button>
+</div>
 
 {{#if offlineSiteCodes}}
 <h4>{{T "Offline Site Creation"}}</h4>
