Added windows live

--- a/app/js/pages/LoginPage.hbs
+++ b/app/js/pages/LoginPage.hbs
@@ -16,6 +16,8 @@
     <button type="button" class="social-login zocial google" data-provider="google">{{T "Sign in with Google"}}</button>
     &nbsp; &nbsp;
     <button type="button" class="social-login zocial facebook" data-provider="facebook">{{T "Sign in with Facebook"}}</button>
+    &nbsp; &nbsp;
+    <button type="button" class="social-login zocial windows" data-provider="windowslive">{{T "Sign in with Windows Live"}}</button>
   </div>
   <br><br>
   <div class="text-center">{{T "-- or --"}}</div>
