--- a/app/js/pages/LoginPage.hbs
+++ b/app/js/pages/LoginPage.hbs
@@ -12,14 +12,14 @@
   <div>
   <br>
   <h3>{{T "Login to mWater"}}</h3>
-  <div class="text-center">
+  <div class="text-center" style="line-height: 50px;">
     <button type="button" class="social-login zocial google" data-provider="google">{{T "Sign in with Google"}}</button>
     &nbsp; &nbsp;
     <button type="button" class="social-login zocial facebook" data-provider="facebook">{{T "Sign in with Facebook"}}</button>
     &nbsp; &nbsp;
     <button type="button" class="social-login zocial windows" data-provider="windowslive">{{T "Sign in with Windows Live"}}</button>
   </div>
-  <br><br>
+  <br>
   <div class="text-center">{{T "-- or --"}}</div>
   <form id="form_login">
     <div class="form-group">
