--- a/app/js/pages/LoginPage.hbs
+++ b/app/js/pages/LoginPage.hbs
@@ -42,3 +42,6 @@
     <button id="signup_button" class="btn btn-lg btn-success btn-block">{{T "Signup"}}</button>
   </div>
 <div>
+
+<!-- Covers the screen to prevent confusion during delays in social login -->
+<div id="cover" style="position:fixed; top:0; left:0; background:rgba(0,0,0,0.6); z-index:10000; width:100%; height:100%; display:none;"></div>
