Switch black_logo to brand

--- a/app/js/AppView.hbs
+++ b/app/js/AppView.hbs
@@ -51,7 +51,7 @@
 	    		&nbsp;
 	  		</div>
 			<a id="brand_logo" class="navbar-brand">
-				<img src="img/black_logo_40.png" style="padding-top: 5px;">
+				<img src="img/brand.png" style="padding-top: 5px;">
 			</a>
 	  		<span class="navbar-brand" style="margin-left: 0px; padding-left: 0px;">
 				<span id="navbar_title"></span>
