Added barcode test

--- a/app/js/pages/SettingsPage.hbs
+++ b/app/js/pages/SettingsPage.hbs
@@ -62,6 +62,11 @@
 <div>
 	<button id="test_ecplates" class="btn btn-default" type="button">{{T "Test EC Compact Dry Plate Counter"}}</button>
 </div>
+<br>
+<div>
+	<button id="test_barcode_scanner" class="btn btn-default" type="button">{{T "Test Barcode Scanner"}}</button>
+</div>
+
 <!-- <br/><br/>
 <div>
 	<button id="weinre" class="btn btn-warning" type="button">{{T "Start Remote Debugger"}}</button>
