--- a/app/js/pages/SensorPage.hbs
+++ b/app/js/pages/SensorPage.hbs
@@ -83,7 +83,7 @@
 <div class="text-muted">{{T "ID (Bluetooth Address)"}}: {{address}}</div>
 {{#with stats}}
 	<div class="text-muted">{{T "Battery voltage"}}: {{batteryVoltage}}</div>
-	<div class="text-muted">{{T "Interal Device UID"}}: {{deviceUid}}</div>
+	<div class="text-muted">{{T "Internal Device UID"}}: {{deviceUid}}</div>
 	<div class="text-muted">{{T "Ant+ Channel"}}: {{channel}}</div>
 	<div class="text-muted">{{T "Firmware version"}}: {{version}}</div>
 	<div class="text-muted">{{T "Status"}}: {{#if enabled}}Logging Enabled{{else}}Logging Disabled{{/if}}</div>
