--- a/app/js/pages/SitePage_status.hbs
+++ b/app/js/pages/SitePage_status.hbs
@@ -24,7 +24,7 @@
 		{{#if canUpdate}}
 		<div class="btn-group" style="margin-top: 5px;">
 		  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-		    Update Status <span class="caret"></span>
+		    {{T "Update Status"}} <span class="caret"></span>
 		  </button>
 		  <ul class="dropdown-menu" role="menu" style="font-size: 125%;">
 		      <li><a id="status_ok"><span class="text-success">{{T "Functional"}}</span></a></li>
